# DragonbornSpeaksNaturally

./: .gitignore  CMakeLists.txt  DragonbornSpeaksNaturally.SAMPLE.ini  LICENSE  README.md  configure.bat  item-name-map.SAMPLE.json
dsn_plugin/: .gitignore  CMakeLists.txt  configure.bat  dsn_plugin.sln  install-path.ini
dsn_plugin/dsn_plugin/: ConsoleCommandRunner.cpp  ConsoleCommandRunner.h  DSNMenuManager.cpp  DSNMenuManager.h  Equipper.cpp  Equipper.h  FavoritesMenuManager.cpp  FavoritesMenuManager.h  Hooks.cpp  Hooks.h  KeyCode.hpp  Log.cpp  Log.h  ReversingNotes.txt  SkyrimType.cpp  SkyrimType.h  SpeechRecognitionClient.cpp  SpeechRecognitionClient.h  StringUtils.hpp  VersionCheck.cpp  VersionCheck.h  WindowUtils.hpp  dsn_plugin.vcxproj  exports.def  main.cpp  xbyak.h  xbyak_bin2hex.h  xbyak_mnemonic.h
dsn_plugin/skse64/: BSModelDB.cpp  BSModelDB.h  GameAPI.cpp  GameAPI.h  GameBSExtraData.h  GameCamera.h  GameData.cpp  GameData.h  GameEvents.cpp  GameEvents.h  GameExtraData.cpp  GameExtraData.h  GameFormComponents.h  GameForms.cpp  GameForms.h  GameHandlers.h  GameInput.cpp  GameInput.h  GameMenus.cpp  GameMenus.h  GameObjects.h  GameRTTI.cpp  GameRTTI.h  GameRTTI.inl  GameReferences.cpp  GameReferences.h  GameResources.cpp  GameSettings.cpp  GameSettings.h  GameStreams.h  GameThreads.cpp  GameTypes.h  GameUtilities.cpp  Hooks_Camera.cpp  Hooks_Data.cpp  Hooks_Event.cpp  Hooks_Gameplay.cpp  Hooks_Handlers.cpp  Hooks_NetImmerse.cpp  Hooks_Papyrus.cpp  (+38 more)
dsn_plugin/skse64_common/: skse64_common.vcxproj  skse_version.h
dsn_plugin/sse/common/: common_vc14.vcxproj
dsn_plugin/sse/skse64/: BSModelDB.h  GameAPI.cpp  GameData.h  GameEvents.cpp  GameEvents.h  GameExtraData.cpp  GameExtraData.h  GameForms.cpp  GameHandlers.h  GameInput.h  GameMenus.cpp  GameMenus.h  GameObjects.h  GameRTTI.inl  GameReferences.cpp  GameResources.cpp  GameSettings.cpp  GameStreams.h  GameThreads.cpp  GameTypes.cpp  GameTypes.h  GameUtilities.cpp  Hooks_Handlers.cpp  Hooks_Papyrus.cpp  Hooks_Scaleform.cpp  Hooks_Threads.cpp  InternalSerialization.cpp  NiGeometry.cpp  NiGeometry.h  NiMaterial.cpp  NiNodes.h  NiObjects.cpp  NiObjects.h  NiRenderer.h  NiSerialization.h  NiTextures.cpp  ObScript.cpp  PapyrusArgs.h  PapyrusNativeFunctions.h  PapyrusVM.cpp  (+5 more)
dsn_plugin/sse/skse64_common/: skse_version.h  skse_version.rc
dsn_plugin/svr/common/: common.vcxproj
dsn_plugin/svr/skse64/: skse64.vcxproj
dsn_service/: CMakeLists.txt  configure.bat  disable_prefer_32bit.ps1  dsn_service.sln
dsn_service/dsn_service/: CommandList.cs  Configuration.cs  ConsoleInput.cs  DialogueList.cs  ExternalInterop.cs  FavoritesList.cs  ISpeechRecognitionGrammarProvider.cs  Log.cs  Phrases.cs  Program.cs  SkyrimInterop.cs  SpeechRecognitionManager.cs  dsn_service.csproj  packages.config
dsn_service/dsn_service/Properties/: AssemblyInfo.cs
fomod/: ModuleConfig.xml  info.xml
